# hexlet_flask_project

./: Makefile  pyproject.toml
hexlet_flask_project/modules/: data.py  example.py  validator.py
hexlet_flask_project/modules/templates/users/: create-superuser.html  create_superuser.html  edit.html  hello.html  index.html  login.html  new.html  show.html
tests/fixtures/: data.json
